<resources>
    <string name="app_name">Unit Converter</string>

    <!-- 1st Row from the top-->
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>

    <!-- Second Row from the top-->
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="clear">C</string>

    <!-- Third Row from top bottom-->
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>

    <!-- Fourth Row from the top-->
    <string name="plusMinus">+/-</string>
    <string name="zero">0</string>
    <string name="point">.</string>

    <string name="settings">Settings</string>
    <string name="select_quantity">Select Quantity</string>

    <!-- Values of options in "Quantity selection page"-->
    <string name="length">Length</string>
    <string name="temperature">Temperature</string>
    <string name="area">Area</string>
    <string name="volume">Volume</string>
    <string name="mass">Mass</string>
    <string name="data">Data</string>
    <string name="backspace">Backspace</string>

</resources>